[package]
name = "bind_match"
version = "0.1.1"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
Convenience macro similar to `matches!` but binds to variables in the pattern and returns an `Option` of the result.
"""
documentation = "https://docs.rs/bind_match"
homepage = "https://github.com/peterjoel/bind_match"
repository = "https://github.com/peterjoel/bind_match"
keywords = ["macro", "pattern", "match"]
categories = ["rust-patterns"]

[dependencies]
